--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-awesome-alerts": "^2.0.0",
+    "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.3"
