--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "AppName",
-    "slug": "AppName",
+    "name": "Onllyons Language",
+    "slug": "Onllyons Language",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
