--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-new-snap-carousel": "^3.9.3",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "4.6.3",
+    "react-native-sound": "^0.11.2",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.3",
     "react-native-toast-message": "^2.2.0",
