--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@gorhom/bottom-sheet": "^4.6.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
@@ -22,6 +23,7 @@
     "expo": "~49.0.8",
     "expo-av": "~13.4.1",
     "expo-device": "~5.4.0",
+    "expo-haptics": "^12.6.0",
     "expo-image": "~1.3.5",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
@@ -32,7 +34,7 @@
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-new-snap-carousel": "^3.9.3",
-    "react-native-reanimated": "^3.6.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-sound": "^0.11.2",
     "react-native-swiper": "^1.6.0",
