--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-awesome-alerts": "^2.0.0",
+    "react-native-circular-progress": "^1.3.9",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
@@ -38,6 +39,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-sound": "^0.11.2",
+    "react-native-svg": "^14.1.0",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.3",
     "react-native-toast-message": "^2.2.0",
