--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-anchor-point": "^1.0.6",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-easy-content-loader": "^0.3.2",
