--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-device": "~5.4.0",
     "expo-haptics": "^12.6.0",
     "expo-image": "~1.3.5",
+    "expo-image-picker": "^14.7.1",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
