--- a/app.json
+++ b/app.json
@@ -1,48 +1,54 @@
 {
-  "expo": {
-    "name": "Onllyons Language",
-    "slug": "Onllyons Language",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+    "expo": {
+        "name": "Onllyons Language",
+        "slug": "Onllyons Language",
+        "version": "1.0.0",
+        "orientation": "portrait",
+        "icon": "./assets/icon.png",
+        "userInterfaceStyle": "light",
+        "splash": {
+            "image": "./assets/splash.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "scheme": "language",
+        "assetBundlePatterns": [
+            "**/*"
+        ],
+        "ios": {
+            "bundleIdentifier": "language",
+            "supportsTablet": true,
+            "infoPlist": {
+                "UIBackgroundModes": [
+                    "audio"
+                ],
+                "NSFaceIDUsageDescription": "Allow $(PRODUCT_NAME) to use Face ID.",
+                "UIApplicationShortcutItemTitle": "ADD_ITEM_SHORTCUT_TITLE",
+                "NSCameraUsageDescription": "Доступ до камери для фото профілю",
+                "NSPhotoLibraryUsageDescription": "Доступ до фотогалереї для фото профілю",
+                "NSMicrophoneUsageDescription": "We need microphone access for recording audio",
+                "NSCalendarsUsageDescription": "Доступ до календаря для планування подій",
+                "NSContactsUsageDescription": "Доступ до контактів для імпорту інформації",
+                "NSAppleMusicUsageDescription": "Доступ до Apple Music для імпорту музики",
+                "NSSpeechRecognitionUsageDescription": "Allow recognition to access your speech recognition"
+            }
+        },
+        "android": {
+            "adaptiveIcon": {
+                "foregroundImage": "./assets/adaptive-icon.png",
+                "backgroundColor": "#ffffff"
+            }
+        },
+        "web": {
+            "favicon": "./assets/favicon.png"
+        }
     },
-    "assetBundlePatterns": ["**/*"],
-    "ios": {
-      "supportsTablet": true,
-      "infoPlist": {
-        "UIBackgroundModes": ["audio"],
-        "NSFaceIDUsageDescription": "Allow $(PRODUCT_NAME) to use Face ID.",
-        "UIApplicationShortcutItemTitle": "ADD_ITEM_SHORTCUT_TITLE",
-        "NSCameraUsageDescription": "Доступ до камери для фото профілю",
-        "NSPhotoLibraryUsageDescription": "Доступ до фотогалереї для фото профілю",
-        "NSMicrophoneUsageDescription": "We need microphone access for recording audio",
-        "NSCalendarsUsageDescription": "Доступ до календаря для планування подій",
-        "NSContactsUsageDescription": "Доступ до контактів для імпорту інформації",
-        "NSAppleMusicUsageDescription": "Доступ до Apple Music для імпорту музики",
-        "NSSpeechRecognitionUsageDescription": "Allow recognition to access your speech recognition"
-      }
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
-  },
-  "plugins": [
-    [
-      "expo-av",
-      {
-        "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone."
-      }
+    "plugins": [
+        [
+            "expo-av",
+            {
+                "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone."
+            }
+        ]
     ]
-  ]
 }
