--- a/package.json
+++ b/package.json
@@ -18,18 +18,20 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.20",
-    "@types/react": "~18.0.27",
+    "@stripe/stripe-react-native": "0.28.0",
+    "@types/react": "~18.2.14",
     "axios": "^1.6.3",
     "expo": "~49.0.8",
     "expo-av": "~13.4.1",
     "expo-device": "~5.4.0",
-    "expo-haptics": "^12.6.0",
+    "expo-haptics": "~12.4.0",
     "expo-image": "~1.3.5",
-    "expo-image-picker": "^14.7.1",
+    "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
+    "expo-linking": "~5.0.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
     "react-native-anchor-point": "^1.0.6",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-circular-progress": "^1.3.9",
@@ -42,10 +44,11 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-sound": "^0.11.2",
+    "react-native-svg": "^14.1.0",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.3",
     "react-native-toast-message": "^2.2.0",
-    "typescript": "^4.9.4"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
