--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "expo": {
         "name": "Onllyons Language",
-        "slug": "Onllyons Language",
+        "slug": "onllyons-language",
         "version": "1.0.0",
         "orientation": "portrait",
         "icon": "./assets/icon.png",
