--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "~18.2.14",
     "axios": "^1.6.3",
     "expo": "~49.0.8",
+    "expo-auth-session": "~5.0.2",
     "expo-av": "~13.4.1",
     "expo-device": "~5.4.0",
     "expo-haptics": "~12.4.0",
@@ -30,6 +31,7 @@
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "^12.8.2",
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-anchor-point": "^1.0.6",
