--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-status-bar": "~1.6.0",
-    "expo-web-browser": "^12.8.2",
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-anchor-point": "^1.0.6",
@@ -46,7 +45,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-sound": "^0.11.2",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "13.9.0",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.3",
     "react-native-toast-message": "^2.2.0",
