--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-easy-content-loader": "^0.3.2",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
