--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native-indicators": "^0.16.6"
   },
   "private": true
 }
