--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-new-snap-carousel": "^3.9.3",
+    "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-sound": "^0.11.2",
