--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "jsEngine": "hermes",
+    "plugins": ["expo-apple-authentication"],
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -19,6 +20,7 @@
     "ios": {
       "bundleIdentifier": "com.onllyons.language",
       "supportsTablet": true,
+      "usesAppleSignIn": true,
       "infoPlist": {
         "UIBackgroundModes": [
           "audio"
@@ -38,11 +40,6 @@
       "package": "com.onllyons.language",
       "adaptiveIcon": {
         "backgroundColor": "#ffffff"
-      }
-    },
-    "extra": {
-      "eas": {
-        "projectId": "9a1563ea-a399-44f9-85ff-783746fd1716"
       }
     }
   }
