--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-apple-authentication": "^6.3.0",
     "expo-auth-session": "~5.0.2",
     "expo-av": "~13.4.1",
+    "expo-build-properties": "^0.11.1",
     "expo-device": "~5.4.0",
     "expo-haptics": "~12.4.0",
     "expo-image": "~1.3.5",
