--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@types/react": "~18.2.14",
     "axios": "^1.6.3",
     "expo": "~49.0.8",
-    "expo-apple-authentication": "^6.3.0",
+    "expo-apple-authentication": "~6.1.0",
     "expo-auth-session": "~5.0.2",
     "expo-av": "~13.4.1",
-    "expo-build-properties": "^0.11.1",
+    "expo-build-properties": "~0.8.3",
     "expo-device": "~5.4.0",
     "expo-haptics": "~12.4.0",
     "expo-image": "~1.3.5",
